[package]
name = "tantivy-cli"
version = "0.16.1"
authors = ["Paul Masurel <paul.masurel@gmail.com>", "Derek Zhou <derek@3qin.us>"]

description = """Command line interface for Tantivy, a search engine library."""
documentation = "https://github.com/derek/tantivy-cli"
homepage = "https://github.com/derek/tantivy-cli"
repository = "https://github.com/derek/tantivy-cli"

readme = "README.md"
keywords = ["search", "information", "retrieval"]
license = "MIT"
edition = "2018"

[dependencies]
time = "0.2"
iron = "0.6"
staticfile = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
persistent = "0.4"
clap = "2"
ansi_term = "0.12"
urlencoded = "0.6"
mount = "0.4"
chan = "0.1"
log = "0.4"
futures = "0.3"
env_logger = "0.7"
tantivy = "0.16.1"
tokio = { version = "1.9.0", features = ["rt", "rt-multi-thread", "time"] }

[[bin]]
name = "tantivy"
path = "src/main.rs"


[profile.release]
opt-level = 3
debug = true
debug-assertions = false
lto = false
